@@ -22,21 +22,25 @@ import com.aayushatharva.seqc.gameserver.SplitPacketDecoder;
 import com.aayushatharva.seqc.utils.Packets;
 import io.netty5.buffer.BufferUtil;
 import io.netty5.buffer.api.Buffer;
-import io.netty5.buffer.api.Send;
 import io.netty5.buffer.api.internal.Statics;
 import io.netty5.channel.ChannelHandlerContext;
 import io.netty5.channel.SimpleChannelInboundHandler;
 import io.netty5.channel.socket.DatagramPacket;
+import it.unimi.dsi.fastutil.objects.ObjectArrayList;
 import org.apache.logging.log4j.LogManager;
 import org.apache.logging.log4j.Logger;
 
-import java.util.ArrayList;
+import java.util.Collections;
 import java.util.List;
 
 final class InfoHandler extends SimpleChannelInboundHandler<DatagramPacket> {
 
     private static final Logger logger = LogManager.getLogger(InfoHandler.class);
-    private static final List<Send<Buffer>> BUFFER_LIST = new ArrayList<>();
+    private static final List<Buffer> BUFFER_LIST = new ObjectArrayList<>();
+
+    InfoHandler() {
+        super(false);
+    }
 
     @Override
     protected void messageReceived(ChannelHandlerContext ctx, DatagramPacket msg) {
@@ -55,8 +59,9 @@ final class InfoHandler extends SimpleChannelInboundHandler<DatagramPacket> {
         // 2. If we receive A2S INFO without challenge then store it into cache directly.
         try (Buffer buffer = msg.content().copy()) {
             if (Statics.equals(Packets.A2S_INFO_RESPONSE_HEADER, buffer.readSplit(Packets.A2S_INFO_RESPONSE_HEADER_LEN))) {
-                Handler.INSTANCE.receiveA2sInfo(List.of(msg.content().copy().send()));
-
+                long s = System.nanoTime();
+                Handler.INSTANCE.receiveA2sInfo(Collections.singletonList(msg.content().copy()));
+                System.out.println(System.nanoTime() - s);
                 logger.debug("New A2S_INFO Update Cached Successfully");
                 return;
             }
@@ -65,18 +70,18 @@ final class InfoHandler extends SimpleChannelInboundHandler<DatagramPacket> {
         // 3. If we receive Split Packet then we will store it into Buffer List
         try (Buffer buffer = msg.content().copy()) {
             if (Statics.equals(Packets.SPLIT_PACKET_HEADER, buffer.readSplit(Packets.SPLIT_PACKET_LEN))) {
-                BUFFER_LIST.add(msg.content().copy().send());
+                BUFFER_LIST.add(msg.content().copy());
 
                 logger.debug("Received Split A2S_INFO Packet, Current List Size: {}", BUFFER_LIST.size());
                 return;
             }
         }
-
+        msg.close();
         logger.error("Received unsupported A2S_INFO Response from Game Server: {}", BufferUtil.hexDump(msg.content()).toUpperCase());
     }
 
     @Override
-    public void userEventTriggered(ChannelHandlerContext ctx, Object evt) throws Exception {
+    public void userEventTriggered(ChannelHandlerContext ctx, Object evt) {
         if (evt instanceof SplitPacketDecoder.SplitPacketsReceivedEvent) {
             if (!BUFFER_LIST.isEmpty()) {
                 Handler.INSTANCE.receiveA2sInfo(BUFFER_LIST);
