@@ -22,7 +22,6 @@ import com.aayushatharva.seqc.gameserver.SplitPacketDecoder;
 import com.aayushatharva.seqc.utils.Packets;
 import io.netty5.buffer.BufferUtil;
 import io.netty5.buffer.api.Buffer;
-import io.netty5.buffer.api.Send;
 import io.netty5.buffer.api.internal.Statics;
 import io.netty5.channel.ChannelHandlerContext;
 import io.netty5.channel.SimpleChannelInboundHandler;
@@ -31,12 +30,13 @@ import org.apache.logging.log4j.LogManager;
 import org.apache.logging.log4j.Logger;
 
 import java.util.ArrayList;
+import java.util.Collections;
 import java.util.List;
 
 final class PlayerHandler extends SimpleChannelInboundHandler<DatagramPacket> {
 
     private static final Logger logger = LogManager.getLogger(PlayerHandler.class);
-    private static final List<Send<Buffer>> BUFFER_LIST = new ArrayList<>();
+    private static final List<Buffer> BUFFER_LIST = new ArrayList<>();
 
     @Override
     protected void messageReceived(ChannelHandlerContext ctx, DatagramPacket msg) {
@@ -55,7 +55,7 @@ final class PlayerHandler extends SimpleChannelInboundHandler<DatagramPacket> {
         // 2. If we receive A2S PLAYER without challenge then store it into cache directly.
         try (Buffer buffer = msg.content().copy()) {
             if (Statics.equals(Packets.A2S_PLAYER_RESPONSE_HEADER, buffer.readSplit(Packets.A2S_PLAYER_RESPONSE_HEADER.readableBytes()))) {
-                Handler.INSTANCE.receiveA2sPlayer(List.of(msg.content().copy().send()));
+                Handler.INSTANCE.receiveA2sPlayer(Collections.singletonList(msg.content().copy()));
 
                 logger.debug("New A2S_PLAYER Update Cached Successfully");
                 return;
@@ -65,13 +65,13 @@ final class PlayerHandler extends SimpleChannelInboundHandler<DatagramPacket> {
         // 3. If we receive Split Packet then we will store it into Buffer List
         try (Buffer buffer = msg.content().copy()) {
             if (Statics.equals(Packets.SPLIT_PACKET_HEADER, buffer.readSplit(Packets.SPLIT_PACKET_LEN))) {
-                BUFFER_LIST.add(msg.content().copy().send());
+                BUFFER_LIST.add(msg.content().copy());
 
                 logger.debug("Received Split A2S_PLAYER Packet, Current List Size: {}", BUFFER_LIST.size());
                 return;
             }
         }
-
+        msg.close();
         logger.error("Received unsupported A2S_PLAYER Response from Game Server: {}", BufferUtil.hexDump(msg.content()).toUpperCase());
     }
 
